// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled icon button 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "backgroundColor": "transparent",
      "borderBottomEndRadius": undefined,
      "borderBottomLeftRadius": undefined,
      "borderBottomRightRadius": undefined,
      "borderBottomStartRadius": undefined,
      "borderRadius": 20,
      "borderTopEndRadius": undefined,
      "borderTopLeftRadius": undefined,
      "borderTopRightRadius": undefined,
      "borderTopStartRadius": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "left": undefined,
      "margin": 6,
      "marginBottom": undefined,
      "marginEnd": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginStart": undefined,
      "marginTop": undefined,
      "marginVertical": undefined,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
      "start": undefined,
      "top": undefined,
    }
  }
  testID="undefined-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderRadius": 20,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="undefined-inner-layer"
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": undefined,
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderColor": "rgba(28, 27, 31, 0.12)",
          "borderRadius": 20,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
          "borderWidth": 0,
          "elevation": 0,
          "flex": undefined,
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessibilityTraits={
          Array [
            "button",
            "disabled",
          ]
        }
        accessible={true}
        centered={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 6,
            "left": 6,
            "right": 6,
            "top": 6,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            false,
            Array [
              Object {
                "alignItems": "center",
                "flexGrow": 1,
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 20,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 0.38)",
                "fontSize": 24,
              },
              Array [
                Object {
                  "lineHeight": 24,
                  "transform": Array [
                    Object {
                      "scaleX": 1,
                    },
                  ],
                },
                Object {
                  "backgroundColor": "transparent",
                },
              ],
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰄀
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders icon button by default 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "backgroundColor": "transparent",
      "borderBottomEndRadius": undefined,
      "borderBottomLeftRadius": undefined,
      "borderBottomRightRadius": undefined,
      "borderBottomStartRadius": undefined,
      "borderRadius": 20,
      "borderTopEndRadius": undefined,
      "borderTopLeftRadius": undefined,
      "borderTopRightRadius": undefined,
      "borderTopStartRadius": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "left": undefined,
      "margin": 6,
      "marginBottom": undefined,
      "marginEnd": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginStart": undefined,
      "marginTop": undefined,
      "marginVertical": undefined,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
      "start": undefined,
      "top": undefined,
    }
  }
  testID="undefined-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderRadius": 20,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="undefined-inner-layer"
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": undefined,
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderColor": "rgba(121, 116, 126, 1)",
          "borderRadius": 20,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
          "borderWidth": 0,
          "elevation": 0,
          "flex": undefined,
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessibilityTraits="button"
        accessible={true}
        centered={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 6,
            "left": 6,
            "right": 6,
            "top": 6,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            false,
            Array [
              Object {
                "alignItems": "center",
                "flexGrow": 1,
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 20,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
              Array [
                Object {
                  "lineHeight": 24,
                  "transform": Array [
                    Object {
                      "scaleX": 1,
                    },
                  ],
                },
                Object {
                  "backgroundColor": "transparent",
                },
              ],
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰄀
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders icon button with color 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "backgroundColor": "transparent",
      "borderBottomEndRadius": undefined,
      "borderBottomLeftRadius": undefined,
      "borderBottomRightRadius": undefined,
      "borderBottomStartRadius": undefined,
      "borderRadius": 20,
      "borderTopEndRadius": undefined,
      "borderTopLeftRadius": undefined,
      "borderTopRightRadius": undefined,
      "borderTopStartRadius": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "left": undefined,
      "margin": 6,
      "marginBottom": undefined,
      "marginEnd": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginStart": undefined,
      "marginTop": undefined,
      "marginVertical": undefined,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
      "start": undefined,
      "top": undefined,
    }
  }
  testID="undefined-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderRadius": 20,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="undefined-inner-layer"
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": undefined,
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderColor": "rgba(121, 116, 126, 1)",
          "borderRadius": 20,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
          "borderWidth": 0,
          "elevation": 0,
          "flex": undefined,
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessibilityTraits="button"
        accessible={true}
        centered={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 6,
            "left": 6,
            "right": 6,
            "top": 6,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            false,
            Array [
              Object {
                "alignItems": "center",
                "flexGrow": 1,
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 20,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "color": "#e91e63",
                "fontSize": 24,
              },
              Array [
                Object {
                  "lineHeight": 24,
                  "transform": Array [
                    Object {
                      "scaleX": 1,
                    },
                  ],
                },
                Object {
                  "backgroundColor": "transparent",
                },
              ],
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰄀
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders icon button with size 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "backgroundColor": "transparent",
      "borderBottomEndRadius": undefined,
      "borderBottomLeftRadius": undefined,
      "borderBottomRightRadius": undefined,
      "borderBottomStartRadius": undefined,
      "borderRadius": 23,
      "borderTopEndRadius": undefined,
      "borderTopLeftRadius": undefined,
      "borderTopRightRadius": undefined,
      "borderTopStartRadius": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "left": undefined,
      "margin": 6,
      "marginBottom": undefined,
      "marginEnd": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginStart": undefined,
      "marginTop": undefined,
      "marginVertical": undefined,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
      "start": undefined,
      "top": undefined,
    }
  }
  testID="undefined-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderRadius": 23,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="undefined-inner-layer"
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": undefined,
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderColor": "rgba(121, 116, 126, 1)",
          "borderRadius": 23,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
          "borderWidth": 0,
          "elevation": 0,
          "flex": undefined,
          "height": 46,
          "overflow": "hidden",
          "width": 46,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessibilityTraits="button"
        accessible={true}
        centered={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 6,
            "left": 6,
            "right": 6,
            "top": 6,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            false,
            Array [
              Object {
                "alignItems": "center",
                "flexGrow": 1,
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 23,
              },
            ],
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 30,
              },
              Array [
                Object {
                  "lineHeight": 30,
                  "transform": Array [
                    Object {
                      "scaleX": 1,
                    },
                  ],
                },
                Object {
                  "backgroundColor": "transparent",
                },
              ],
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰄀
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders icon change animated 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "backgroundColor": "transparent",
      "borderBottomEndRadius": undefined,
      "borderBottomLeftRadius": undefined,
      "borderBottomRightRadius": undefined,
      "borderBottomStartRadius": undefined,
      "borderRadius": 20,
      "borderTopEndRadius": undefined,
      "borderTopLeftRadius": undefined,
      "borderTopRightRadius": undefined,
      "borderTopStartRadius": undefined,
      "bottom": undefined,
      "end": undefined,
      "flex": undefined,
      "left": undefined,
      "margin": 6,
      "marginBottom": undefined,
      "marginEnd": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginStart": undefined,
      "marginTop": undefined,
      "marginVertical": undefined,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
      "start": undefined,
      "top": undefined,
    }
  }
  testID="undefined-outer-layer"
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderRadius": 20,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="undefined-inner-layer"
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": undefined,
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderColor": "rgba(121, 116, 126, 1)",
          "borderRadius": 20,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
          "borderWidth": 0,
          "elevation": 0,
          "flex": undefined,
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessibilityTraits="button"
        accessible={true}
        centered={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 6,
            "left": 6,
            "right": 6,
            "top": 6,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            false,
            Array [
              Object {
                "alignItems": "center",
                "flexGrow": 1,
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 20,
              },
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "height": 24,
                "width": 24,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                Array [
                  Object {
                    "color": "rgba(73, 69, 79, 1)",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "lineHeight": 24,
                      "transform": Array [
                        Object {
                          "scaleX": 1,
                        },
                      ],
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                  ],
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰄀
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
